--- a/package.json
+++ b/package.json
@@ -6,23 +6,26 @@
   "scripts": {
     "build": "npm run build:css && remix build",
     "build:css": "NODE_ENV=production tailwindcss -i /app/styles/tailwind.css -o ./app/styles/app.css --minify",
-    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+    "dev": "concurrently \"npm run dev:css\" \"node -r dotenv/config node_modules/.bin/remix dev\"",
     "dev:css": "tailwindcss -i ./app/styles/tailwind.css -o ./app/styles/app.css --watch",
     "postinstall": "remix setup node",
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
+    "@supabase/supabase-js": "^1.29.1",
+    "@tailwindcss/forms": "^0.4.0",
     "autoprefixer": "^10.4.0",
+    "dotenv": "^10.0.0",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.1"
   },
   "devDependencies": {
-    "@headlessui/react": "^1.4.2",
-    "@heroicons/react": "^1.0.5",
     "@remix-run/dev": "^1.1.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
